# Minimal-Socket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  build.bat  build.sh  flake.nix
CrossSocket/: CMakeLists.txt
CrossSocket/AsynchSocket/: CMakeLists.txt
CrossSocket/AsynchSocket/include/: AsyncClient.h  AsyncDecorator.h  AsyncSocket.h  AsyncTcpServer.h  Service.h
CrossSocket/AsynchSocket/src/: AsyncClient.cpp  AsyncTcpServer.cpp  Service.cpp
CrossSocket/SynchSocket/: CMakeLists.txt
CrossSocket/SynchSocket/include/: Error.h  Ip.h
CrossSocket/SynchSocket/src/: Channel.cpp  Channel.h  Commons.cpp  Commons.h  Ip.cpp
CrossSocket/TypedSocket/: CMakeLists.txt
CrossSocket/cmake/: Cross-SocketConfig.cmake.in
CrossSocket/include/: Address.h  Error.h  Ip.h  Messanger.h  MessangerConcrete.h  MessangerCrypted.h  MessangerDecorator.h  Socket.h  SocketClient.h  SocketConcrete.h  SocketCrypted.h  SocketDecorator.h  SocketServer.h  StringClient.h  TcpClient.h  TcpServer.h  TypedClient.h  UdpClient.h  UdpServer.h
CrossSocket/include/async/: AsyncClient.h  AsyncDecorator.h  AsyncService.h  AsyncSocketCrypted.h  AsyncTcpServer.h  ClientListener.h  ErrorListener.h  MessageListener.h  Service.h  TcpServerListener.h
CrossSocket/include/core/: Client.h  MessangerConcrete.h  SocketConcrete.h  SocketDecorator.h
CrossSocket/include/tcp/: TcpClient.h  TcpServer.h
CrossSocket/include/typed/: StringClient.h  TypedClient.h
CrossSocket/include/udp/: UdpClient.h  UdpServer.h
CrossSocket/src/: Address.cpp  Handler.cpp  Handler.h  Ip.cpp  MessangerConcrete.cpp  Socket.cpp  SocketClient.cpp  SocketConcrete.cpp  SocketDecorator.cpp  SocketHandler.cpp  SocketHandler.h  SocketServer.cpp  StringClient.cpp  TcpClient.cpp  TcpServer.cpp  UdpClient.cpp  UdpServer.cpp
CrossSocket/src/async/: AsyncClient.cpp  AsyncTcpServer.cpp  Service.cpp
CrossSocket/src/core/: Client.cpp  Core.cpp  Core.h  MessangerConcrete.cpp  SocketConcrete.cpp  SocketDecorator.cpp
CrossSocket/src/tcp/: TcpClient.cpp  TcpServer.cpp
CrossSocket/src/typed/: StringClient.cpp
CrossSocket/src/udp/: UdpClient.cpp  UdpServer.cpp
Samples/Sample_01_handshake/: CMakeLists.txt  Client.cpp  Launcher.cpp  Server.cpp  build.bat  build.sh  launch.bat  launch.sh
Samples/Sample_01_handshake/src/: Client.cpp  Server.cpp
Samples/Sample_01_server_client/: CMakeLists.txt  Launcher.cpp  Server.cpp
Samples/Sample_02_monothread_services/: CMakeLists.txt  Client_A.cpp  Client_B.cpp  Launcher.cpp  Server.cpp  build.bat  build.sh  launch.sh
Samples/Sample_02_monothread_services/src/: Client_A.cpp  Client_B.cpp  Server.cpp
Samples/Sample_03_multithread_services/: CMakeLists.txt  Client_A_slow.cpp  Client_B_fast.cpp  Launcher.cpp  Server.cpp  build.bat  build.sh  launch.bat  launch.sh
Samples/Sample_03_multithread_services/src/: Client_A_slow.cpp  Client_B_fast.cpp  Server.cpp
Samples/Sample_04_repeater/: CMakeLists.txt  Client.cpp  Launcher.cpp  Repeater.cpp  Server.cpp  build.bat  build.sh  launch.bat  launch.sh
Samples/Sample_04_repeater/src/: Client.cpp  (+2 more)
Samples/Tcp/: CMakeLists.txt  Launcher-01-server-client.cpp  Launcher-02-server-clients.cpp  Launcher-03-repeater.cpp  Launcher-04-asyncserver-client.cpp  README.md  SampleTcp-02-server-clients.cpp  SampleTcp-03-asyncserver-client.cpp  SampleTcp-03-asyncserver-clients.cpp  SampleTcp-04-repeater.cpp  Server.cpp  TcpClient.cpp  TcpRepeater.cpp  TcpServer.cpp  TcpServerAsync.cpp
Samples/Udp/: CMakeLists.txt  Launcher-01-client-client.cpp  Launcher-02-client-server.cpp  README.md  Sample-02-client-server.cpp  SampleUdp-01-client-client.cpp  SampleUdp-02-server.cpp  SampleUdp-03-server.cpp  UdpAsker.cpp  UdpClientAsker.cpp  UdpClientResponder.cpp  UdpResponder.cpp  UdpResponderAsync.cpp  UdpServer.cpp  UdpServerResponder.cpp
Samples/Utils/: CMakeLists.txt
Tests/: CMakeLists.txt  Test01-tcp-synch.cpp  Test01-udp-synch.cpp  Test02-tcp-asynch.cpp  Test02-udp-asynch.cpp  Test03-typed.cpp
Tests/UtilsTest/: CMakeLists.txt
Utils/: CMakeLists.txt
Utils/include/: Asker.h  AsyncResponder.h  AsyncStringMessanger.h  Logger.h  Names.h  NamesMap.h  ProcessLauncher.h  Responder.h  ResponderAsync.h  StringMessanger.h
Utils/src/: Asker.cpp  AsyncResponder.cpp  AsyncStringMessanger.cpp  Logger.cpp  Names.cpp  NamesMap.cpp  ProcessLauncher.cpp  Responder.cpp  ResponderAsync.cpp  StringMessanger.cpp
samples/: CMakeLists.txt  Launcher.cpp  README.cpp  README.md
samples/cmake/: MakaLauncher.cmake  MakeSample.cmake
samples/tcp/: CMakeLists.txt  README.md  Sample01_server_client  Sample02_server_2_clients  Sample03_chain_with_2_repeaters  Sample04_server_nn_block_2_clients  TcpClient.cpp  TcpRepeater.cpp  TcpScriptsGenerator.cpp  TcpServer.cpp  TcpServerNonBlocking.cpp
samples/udp/: CMakeLists.txt  README.md  Sample01_asker_responder  Sample02_asker_connected_responer  Sample03_2_askers_responder  Sample04_2_askers_2_nn_block_responders  Sample04_2_askers_responder_nn_block  UdpAsker.cpp  UdpResponder.cpp  UdpResponderNonBlocking.cpp  UdpScriptsGenerator.cpp
samples/utils/: Args.cpp  Args.h  Ask.h  Asker.h  Monitor.py  Names.cpp  Names.h  Pollables.cpp  Pollables.h  Respond.h  Responder.cpp  ScriptGenerator.cpp  ScriptGenerator.h  TimeOfDay.cpp  TimeOfDay.h
src/: CMakeLists.txt  Stream_Socket.cpp  Stream_Socket.h  config.cmake.in
src/SynchSocket/: CMakeLists.txt
src/src/: Address.cpp  Commons.cpp  Commons.h  Error.cpp  SocketAddress.cpp  SocketAddress.h  SocketError.cpp  SocketError.h  SocketFunctions.cpp  SocketFunctions.h  SocketHandler.cpp  SocketHandler.h  SocketId.cpp  SocketId.h  Utils.cpp  Utils.h
tests/: CMakeLists.txt  ConnectionsUtils.cpp  ConnectionsUtils.h  Foo.cpp  IsTimeout.cpp  IsTimeout.h  Parallel.cpp  Parallel.h  ParallelSection.cpp  ParallelSection.h  PortFactory.cpp  PortFactory.h  RollingView.cpp  RollingView.h  SlicedOps.cpp  SlicedOps.h  Test00-address.cpp  Test01-tcp.cpp  Test01-udp.cpp  TestAddress.cpp  TestOpenTimeout.cpp  TestRobustness.cpp  TestTCP.cpp  TestUDP.cpp
tests/UtilsTest/: CMakeLists.txt
tests/cmake/: FindOMP.cmake
(+233 files in other folders)
